src/test/resources/org/shirolang/interpreter/errors/read_from_internal_port.sro
node N begin
    d Double
end

n N
n.d
